--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "private": true,
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.7",
+    "@types/react-router": "^5.1.20",
+    "@types/react-router-dom": "^5.3.3",
     "@ya.praktikum/react-developer-burger-ui-components": "^1.14.0",
     "clsx": "^1.2.1",
     "prop-types": "^15.8.1",
@@ -13,6 +15,7 @@
     "react-dom": "^17.0.1",
     "react-intersection-observer": "^8.32.5",
     "react-redux": "^7.2.9",
+    "react-router": "^6.21.0",
     "react-router-dom": "^6.20.1",
     "react-scripts": "5.0.1",
     "redux": "^4.2.1",
@@ -27,6 +30,7 @@
     "@testing-library/user-event": "^12.1.10",
     "@types/react": "17.0.0",
     "@types/react-dom": "17.0.0",
+    "@types/uuid": "^9.0.7",
     "typescript": "^4.9.5"
   },
   "scripts": {
