--- a/package.json
+++ b/package.json
@@ -31,12 +31,15 @@
     "@types/react": "17.0.0",
     "@types/react-dom": "17.0.0",
     "@types/uuid": "^9.0.7",
+    "cypress": "^13.6.1",
+    "eslint-plugin-cypress": "^2.15.1",
     "typescript": "^4.9.5"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
+    "test-cy": "cypress open",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
