--- a/package.json
+++ b/package.json
@@ -40,7 +40,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "test-cy": "cypress open",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "deploy-script": "npm run build && scp -r ./build/* lizananeva@130.193.50.23:/home/lizananeva/stellar-frontend"
   },
   "eslintConfig": {
     "extends": [
